--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vvv
   entry_points:
     - pipestat = pipestat.__main__:main
 
@@ -22,15 +22,10 @@ requirements:
     - pip
   run:
     - python >=3.8
-    - setuptools
     - jsonschema
     - logmuse >=0.2.5
-    - oyaml
-    - psycopg2
-    - pydantic >=1.10.7,<2.0.0
-    - sqlmodel >=0.0.8
-    - ubiquerg >=0.6.1
-    - yacman >=0.9.1
+    - ubiquerg >=0.8.0
+    - yacman >=0.9.3
     - pyyaml
     - pandas
     - eido
