--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vvv
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation --no-cache-dir -vvv
   entry_points:
     - pipestat = pipestat.__main__:main
 
@@ -20,12 +20,13 @@ requirements:
   host:
     - python >=3.8
     - pip
+    - setuptools
   run:
     - python >=3.8
     - setuptools
     - jsonschema
     - logmuse >=0.2.5
-    - ubiquerg >=0.6.1
+    - ubiquerg >=0.8.0
     - yacman >=0.9.3
     - pyyaml
     - pandas
@@ -39,13 +40,13 @@ test:
     - pipestat --help
 
 about:
-  home: https://github.com/pepkit/pipestat
-  summary: A pipeline results reporter
+  home: "https://github.com/pepkit/pipestat"
+  summary: "A pipeline results reporter."
   license: BSD-2-Clause
   license_family: BSD
   license_file: LICENSE
-  doc_url: https://pipestat.databio.org/en/latest/
-  dev_url: https://github.com/pepkit/pipestat
+  doc_url: "https://pipestat.databio.org/en/latest"
+  dev_url: "https://github.com/pepkit/pipestat"
 
 extra:
   recipe-maintainers:
